syntax = "proto3";
option csharp_namespace = "Lachain.Proto";
option java_package = "com.latoken.proto";
import "default.proto";

message LeafNodeInfo {
    bytes node_type = 1;
    UInt256 hash = 2;
    UInt256 key_hash = 3;
    bytes value = 4;
}

message InternalNodeInfo {
    bytes node_type = 1;
    UInt256 hash = 2;
    uint32 children_mask = 3;
    repeated UInt256 children_hash = 4;
}

message TrieNodeInfo {
    oneof message {
        LeafNodeInfo leaf = 1;
        InternalNodeInfo non_leaf = 2;
    }
}