syntax = "proto3";
option csharp_namespace = "Phorkus.Proto.Grpc";
option java_package = "com.latoken.proto";

import "block.proto";
import "transaction.proto";
import "default.proto";

message GetBlockByHeightRequest {
    uint64 block_height = 1;
}
message GetBlockByHeightReply {
    Block block = 1;
}

message GetBlockByHashRequest {
    UInt256 block_hash = 1;
}
message GetBlockByHashReply {
    Block block = 1;
}

message GetTransactionByHashRequest {
    UInt256 transaction_hash = 1;
}
message GetTransactionByHashReply {
    SignedTransaction transaction = 1;
}

message GetBlockStatRequest {
}
message GetBlockStatReply {
    uint64 current_height = 1;
}

service BlockchainService {
    rpc GetBlockByHeight(GetBlockByHeightRequest) returns(GetBlockByHeightReply);   
    rpc GetBlockByHash(GetBlockByHashRequest) returns(GetBlockByHashReply);
    rpc GetTransactionByHash(GetTransactionByHashRequest) returns(GetTransactionByHashReply);
    rpc GetBlockStat(GetBlockStatRequest) returns(GetBlockStatReply);
}